--- a/HTML/Rabota.html
+++ b/HTML/Rabota.html
@@ -669,7 +669,6 @@
         </div>
 
         <div class="hot-tours-list reviews">
-          
           <div class="hot-tour-item">
             <div class="avatar"></div>
             <hr />
@@ -681,6 +680,140 @@
           <div class="hot-tour-item">
             <div class="avatar"></div>
             <hr />
+          </div>
+        </div>
+      </div>
+
+      <!-- Почему мы? -->
+
+      <div class="content-block information-block">
+        <div class="inscription">
+          <h1 class="block-title">Почему мы ?</h1>
+        </div>
+
+        <div class="information-all">
+          <div class="information-item">
+            <div class="info">
+              <div class="info-icon">
+                <svg
+                  width="150"
+                  height="150"
+                  viewBox="0 0 111 111"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g opacity="0.6">
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M37.1454 19.203C37.1454 14.3351 39.0792 9.6665 42.5213 6.22434C45.9635 2.78218 50.6321 0.848389 55.5 0.848389C60.368 0.848389 65.0365 2.78218 68.4787 6.22434C71.9209 9.6665 73.8546 14.3351 73.8546 19.203C73.8546 24.071 71.9209 28.7396 68.4787 32.1817C65.0365 35.6239 60.368 37.5577 55.5 37.5577C50.6321 37.5577 45.9635 35.6239 42.5213 32.1817C39.0792 28.7396 37.1454 24.071 37.1454 19.203ZM19.3933 49.2682C23.1296 45.7213 28.0848 43.7438 33.2366 43.7438C38.3883 43.7438 43.3436 45.7213 47.0799 49.2682L47.1591 49.3475L55.5 57.6883L63.8488 49.3475L63.9281 49.2682C67.6636 45.7259 72.6155 43.7513 77.7634 43.7513C82.9114 43.7513 87.8633 45.7259 91.5988 49.2682C93.4543 51.0279 94.9324 53.1467 95.9432 55.4957C96.954 57.8446 97.4764 60.3747 97.4786 62.9319C97.4809 65.4892 96.9629 68.0201 95.9561 70.3708C94.9494 72.7216 93.475 74.8429 91.6226 76.6059L58.2592 109.034C57.5192 109.753 56.528 110.155 55.496 110.155C54.4641 110.155 53.4729 109.753 52.7329 109.034L19.3774 76.6059C17.5258 74.8436 16.0518 72.7231 15.0451 70.3734C14.0384 68.0237 13.5201 65.4939 13.5216 62.9376C13.5231 60.3813 14.0443 57.8521 15.0537 55.5035C16.0631 53.155 17.5396 51.0283 19.3933 49.2682Z"
+                      fill="#03A9F5"
+                    />
+                  </g>
+                </svg>
+              </div>
+
+              <div class="info-text big">Забота о вас 24/7</div>
+              <div class="info-text small">
+                Сопровождаем с момента
+                <br />
+                заключения договора
+                <br />
+                и до возвращения
+              </div>
+            </div>
+          </div>
+          <div class="information-item">
+            <div class="info">
+              <div class="info-icon">
+                <svg
+                  width="150"
+                  height="150"
+                  viewBox="0 0 103 103"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g opacity="0.6">
+                    <path
+                      d="M51.5 72.9584C53.7764 72.9584 55.9596 72.0541 57.5693 70.4444C59.179 68.8347 60.0833 66.6515 60.0833 64.3751C60.0833 62.0986 59.179 59.9154 57.5693 58.3057C55.9596 56.6961 53.7764 55.7917 51.5 55.7917C49.2236 55.7917 47.0404 56.6961 45.4307 58.3057C43.821 59.9154 42.9167 62.0986 42.9167 64.3751C42.9167 66.6515 43.821 68.8347 45.4307 70.4444C47.0404 72.0541 49.2236 72.9584 51.5 72.9584ZM77.25 34.3334C79.5264 34.3334 81.7096 35.2377 83.3193 36.8474C84.929 38.4571 85.8333 40.6403 85.8333 42.9167V85.8334C85.8333 88.1099 84.929 90.2931 83.3193 91.9027C81.7096 93.5124 79.5264 94.4167 77.25 94.4167H25.75C23.4736 94.4167 21.2904 93.5124 19.6807 91.9027C18.071 90.2931 17.1667 88.1099 17.1667 85.8334V42.9167C17.1667 40.6403 18.071 38.4571 19.6807 36.8474C21.2904 35.2377 23.4736 34.3334 25.75 34.3334H30.0417V25.7501C30.0417 20.059 32.3024 14.601 36.3267 10.5767C40.3509 6.55253 45.8089 4.29175 51.5 4.29175C54.3179 4.29175 57.1083 4.84678 59.7117 5.92517C62.3152 7.00355 64.6807 8.58416 66.6733 10.5767C68.6659 12.5693 70.2465 14.9349 71.3249 17.5383C72.4033 20.1418 72.9583 22.9321 72.9583 25.7501V34.3334H77.25ZM51.5 12.8751C48.0853 12.8751 44.8105 14.2316 42.396 16.6461C39.9815 19.0606 38.625 22.3354 38.625 25.7501V34.3334H64.375V25.7501C64.375 22.3354 63.0185 19.0606 60.604 16.6461C58.1895 14.2316 54.9147 12.8751 51.5 12.8751Z"
+                      fill="#03A9F5"
+                    />
+                  </g>
+                </svg>
+              </div>
+
+              <div class="info-text big">Надежность</div>
+              <div class="info-text small">
+                Более 1000 туристов
+                <br />
+                быррали наше
+                <br />
+                агенство и остались довольны
+              </div>
+            </div>
+          </div>
+          <div class="information-item">
+            <div class="info">
+              <div class="info-icon">
+                <svg
+                  width="150"
+                  height="150"
+                  viewBox="0 0 122 122"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g opacity="0.6">
+                    <path
+                      d="M38.125 55.9166C33.2111 55.9166 29.0174 54.1798 25.5438 50.7062C22.0701 47.2326 20.3333 43.0388 20.3333 38.1249C20.3333 33.211 22.0701 29.0173 25.5438 25.5437C29.0174 22.0701 33.2111 20.3333 38.125 20.3333C43.0389 20.3333 47.2327 22.0701 50.7063 25.5437C54.1799 29.0173 55.9167 33.211 55.9167 38.1249C55.9167 43.0388 54.1799 47.2326 50.7063 50.7062C47.2327 54.1798 43.0389 55.9166 38.125 55.9166ZM38.125 45.7499C40.2431 45.7499 42.0443 45.0078 43.5286 43.5234C45.0129 42.0391 45.7534 40.2396 45.75 38.1249C45.75 36.0069 45.0078 34.2057 43.5235 32.7213C42.0392 31.237 40.2397 30.4965 38.125 30.4999C36.007 30.4999 34.2058 31.2421 32.7214 32.7264C31.2371 34.2108 30.4966 36.0103 30.5 38.1249C30.5 40.243 31.2422 42.0442 32.7265 43.5285C34.2108 45.0128 36.0103 45.7533 38.125 45.7499ZM83.875 101.667C78.9611 101.667 74.7674 99.9298 71.2938 96.4562C67.8201 92.9826 66.0833 88.7888 66.0833 83.8749C66.0833 78.961 67.8201 74.7673 71.2938 71.2937C74.7674 67.8201 78.9611 66.0833 83.875 66.0833C88.7889 66.0833 92.9827 67.8201 96.4563 71.2937C99.9299 74.7673 101.667 78.961 101.667 83.8749C101.667 88.7888 99.9299 92.9826 96.4563 96.4562C92.9827 99.9298 88.7889 101.667 83.875 101.667ZM83.875 91.4999C85.9931 91.4999 87.7943 90.7578 89.2786 89.2734C90.7629 87.7891 91.5034 85.9896 91.5 83.8749C91.5 81.7569 90.7579 79.9557 89.2735 78.4713C87.7892 76.987 85.9897 76.2465 83.875 76.2499C81.757 76.2499 79.9558 76.9921 78.4714 78.4764C76.9871 79.9608 76.2466 81.7603 76.25 83.8749C76.25 85.993 76.9922 87.7942 78.4765 89.2785C79.9608 90.7628 81.7603 91.5033 83.875 91.4999ZM27.45 101.667L20.3333 94.5499L94.55 20.3333L101.667 27.4499L27.45 101.667Z"
+                      fill="#03A9F5"
+                    />
+                  </g>
+                </svg>
+              </div>
+
+              <div class="info-text big">Рассрочка</div>
+              <div class="info-text small">
+                Рассрочка оплаты
+                <br />
+                по выгодным условиям
+              </div>
+            </div>
+          </div>
+          <div class="information-item">
+            <div class="info">
+              <div class="info-icon">
+                <svg
+                  width="150"
+                  height="150"
+                  viewBox="0 0 124 124"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g opacity="0.6">
+                    <path
+                      d="M51.6667 26.8459C59.4167 13.4229 78.0064 12.2243 91.4294 19.9743C104.852 27.7243 113.109 44.4229 105.359 57.8459L87.4614 47.5126L78.5127 42.3459L69.564 37.1793L51.6667 26.8459Z"
+                      fill="#03A9F5"
+                    />
+                    <path
+                      d="M91.4293 19.9743C78.0063 12.2243 59.4167 13.4229 51.6667 26.8459L69.564 37.1793M91.4293 19.9743C104.852 27.7243 113.109 44.4229 105.359 57.8459L78.5127 42.3459M91.4293 19.9743L94.0127 15.4999M91.4293 19.9743C82.0208 22.4956 76.0223 25.9934 69.564 37.1793M91.4293 19.9743C93.9507 29.3828 93.9197 36.3268 87.4613 47.5126M69.564 37.1793L78.5127 42.3459M78.5127 42.3459L63.0127 69.1919M15.5 108.5L20.0467 103.044C21.0453 101.844 22.3027 100.886 23.7244 100.242C25.1462 99.5975 26.6954 99.2833 28.2558 99.3231C29.8163 99.3629 31.3475 99.7555 32.7346 100.471C34.1216 101.187 35.3286 102.208 36.2648 103.457C37.188 104.689 38.3746 105.7 39.7381 106.414C41.1016 107.129 42.6075 107.53 44.1459 107.589C45.6843 107.647 47.2163 107.361 48.6301 106.752C50.0439 106.143 51.3037 105.225 52.3177 104.067L53.2993 102.941C54.3837 101.7 55.7208 100.706 57.221 100.025C58.7212 99.3435 60.3498 98.9911 61.9974 98.9911C63.645 98.9911 65.2736 99.3435 66.7738 100.025C68.274 100.706 69.6112 101.7 70.6955 102.941L71.6823 104.067C76.012 109.011 83.793 108.717 87.7352 103.462C88.6714 102.213 89.8785 101.191 91.2661 100.474C92.6537 99.7577 94.1855 99.3648 95.7467 99.325C97.3078 99.2852 98.8577 99.5997 100.28 100.245C101.702 100.89 102.96 101.848 103.958 103.049L108.5 108.5M34.658 82.6666C42.2017 75.9945 51.929 72.3183 62 72.3333C72.071 72.3183 81.7983 75.9945 89.342 82.6666"
+                      stroke="#03A9F5"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </g>
+                </svg>
+              </div>
+
+              <div class="info-text big">Любой вид отдыха</div>
+              <div class="info-text small">
+                Экскурсии
+                <br />
+                круизы
+                <br />
+                активный отдых и тд.
+              </div>
+            </div>
           </div>
         </div>
       </div>
